fix(ci): fix release version guard quoting

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Version guard
         run: |
           TAG_VERSION="${GITHUB_REF_NAME#v}"
-          NPM_VERSION="$(node -p \"require('./npm/package.json').version\")"
-          if [ \"${TAG_VERSION}\" != \"${NPM_VERSION}\" ]; then
-            echo \"version mismatch: tag=${TAG_VERSION} npm=${NPM_VERSION}\"
+          NPM_VERSION="$(node -p 'require("./npm/package.json").version')"
+          if [ "${TAG_VERSION}" != "${NPM_VERSION}" ]; then
+            echo "version mismatch: tag=${TAG_VERSION} npm=${NPM_VERSION}"
             exit 1
           fi
 
