--- a/npm/package.json
+++ b/npm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sharelocal",
+  "name": "sharelocal.dev",
   "version": "0.1.3",
   "description": "sharelocal: expose localhost via https://on.sharelocal.dev",
   "license": "MIT",
